# rl-ablations

./: .env.example  .gitignore  README.md  progress.md  pyproject.toml  requirements.txt
checkpoints/grpo-dis-2/: README.md  generation_config.json
checkpoints/grpo-dis-2/checkpoint-16/: rng_state.pth  scheduler.pt  trainer_state.json
checkpoints/ppo/: config.json  metrics.json
checkpoints/ppo-3/: generation_config.json  metrics.json
checkpoints/sft_base/: README.md
checkpoints/sft_base/checkpoint-128/: scheduler.pt  trainer_state.json
checkpoints/sft_base/checkpoint-256/: scheduler.pt  trainer_state.json
evaluations/: README.md  __init__.py  _common.py  compare_results.py  evaluate_base.py  evaluate_grpo.py  evaluate_grpo3.py  evaluate_grpo_dis.py  evaluate_grpo_dis3.py  evaluate_ppo.py  evaluate_ppo2.py  evaluate_ppo4.py  evaluate_sft.py
inference/: run.py
notebooks/: 00_sft.ipynb  01_ppo.ipynb  01_ppo_2.ipynb  02_grpo.ipynb  03_grpo_dis.ipynb  04_sao.ipynb
runs/: grpo-dis-2.executed.ipynb  ppo-3.executed.ipynb
runs/gae_visualizations/: gae.md  step_001_problem_0.csv  step_001_problem_0_counterfactual.csv
tests/: validate_project.py
visualizations/: plot_gae.py
