[project]
name = "rl-ablations"
version = "0.1.0"
description = "Single-GPU GSM8K reinforcement-learning ablations"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "accelerate==1.14.0",
    "datasets==5.0.0",
    "flash-attn==2.8.3.post1",
    "ipywidgets>=8.1,<9.0",
    "jupyterlab>=4.0,<5.0",
    "matplotlib>=3.10,<4.0",
    "nbformat>=5.10,<6.0",
    "peft==0.19.1",
    "torch>=2.5.0,<2.9.0",
    "transformers==5.14.0",
    "trl==1.8.0",
    "wandb==0.28.0",
]

[tool.uv]
package = false

[tool.uv.sources]
flash-attn = { url = "https://github.com/Dao-AILab/flash-attention/releases/download/v2.8.3.post1/flash_attn-2.8.3.post1%2Bcu12torch2.8cxx11abiFALSE-cp311-cp311-linux_x86_64.whl" }
